--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,12 @@
-<html>
-    <head>
-        <title>dbk's blog</title>
-    </head>
-    <body>
-        <div>
-             <h1><a href="/">dbk's blog</a></h1>
-        </div>
-	
-{% for post in posts %}
-    <div>
-        <h2><a href="">{{ post.title }}</a></h2>
-        <p>published: {{ post.published_date }}</p>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
-{% endfor %}
-    </body>
-</html>
+                {% extends 'blog/base.html' %}
+                {% block content %}
+                     {% for post in posts %}
+                         <div class="post">
+                             <div class="date">
+                                 <p>published: {{ post.published_date }}</p>
+                             </div>
+                             <h2><a href="">{{ post.title }}</a></h2>
+                             <p>{{ post.text|linebreaksbr }}</p>
+                         </div>
+                     {% endfor %}
+                {% endblock %}
